Frontend icin bazi degisiklikler yapildi